--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <!--Main/Greeting-->
     <string name="main_greeting">Главная</string>
     <string name="text_fiscal_mode">Фискальный режим</string>
@@ -18,4 +17,11 @@
     <string name="text_timestamp">25/09/19 - 15:43</string>
     <string name="text_payment_amount">75.00 с</string>
     <string name="text_profile">Профиль</string>
+
+    <string name="title_text">Сумма к оплате, сом:</string>
+    <string name="content_text">351.68</string>
+    <string name="next_icon_description">Next Icon</string>
+    <string name="delete_icon">Delete Icon</string>
+    <string name="price">Цена, сом</string>
+    <string name="zero">0</string>
 </resources>
