--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="discount">Скидка %</string>
     <string name="allowance">Надбавка %</string>
     <string name="count">Количество:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
     <!--
