added 2 textView and two buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="info">Информация</string>
     <string name="info_about_app">Информация о приложении</string>
     <string name="menu">Меню</string>
+
+
+    <string name="main">Главное</string>
+
 </resources>
