--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="test_print_x_report">Тестовая печать x-отчета</string>
     <string name="test_print_z_report">тестовая печать Z-отчета</string>
     <string name="test_empty">Тест без позиций</string>
+    <string name="main">Главное</string>
 </resources>
