--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="fiscal_regime">Фискальный режим</string>
     <string name="fiscal_regime_content">Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД.</string>
     <string name="add_product">Добавить товар</string>
-    <string name="product_expression">%1$s * %2$s + %3$s\%% + %4$s\%%</string>
-    <string name="product_sum">%1$s с</string>
     <string name="sum_pay">Сумма к оплате, сом:</string>
     <string name="test_sum">5123.2</string>
     <string name="discount">Скидка %</string>
@@ -13,4 +11,6 @@
     <string name="payment_by_cash">Наличные</string>
     <string name="payment_by_card">Оплата Картой</string>
     <string name="tw_to_be_paid">Итого к оплате</string>
+    <string name="btn_continue">Далее</string>
+    <string name="et_received">Принято у клиента, сом:</string>
 </resources>
