--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="text_change_password">Сменить пароль</string>
     <string name="text_app_name">О! касса</string>
     <string name="text_app_version">Версия приложения 1.1.0</string>
+    <string name="info_about_app">Информация о приложении</string>
     <string name="text_exit">ВЫХОД</string>
 
     <!--History-->
@@ -35,12 +36,15 @@
     <string name="text_return">Возврат</string>
     <string name="text_report">X - отчет</string>
     <string name="text_interim_report">Промежуточный отчет смены</string>
-    <string name="text_story">История</string>
-    <string name="text_story_list">Список операций за период</string>
+    <string name="text_history">История</string>
+    <string name="text_history_list">Список операций за период</string>
     <string name="text_information">Информация</string>
     <string name="text_operations">Прочие операции</string>
     <string name="text_operations_list">Список операций за период</string>
     <string name="text_shift_closing_and_report">Закрытие смены и z-отчет</string>
+
+    <!--History-->
+    <string name="history_title">История</string>
 
     <!--Bottom Sheet Dialog-->
     <string name="text_shift_closing">Закрытие смены</string>
