--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -24,5 +24,5 @@
     <string name="next_icon_description">Next Icon</string>
     <string name="delete_icon">Delete Icon</string>
     <string name="price">Цена, сом</string>
-    <string name="zero">0</string>
+    <string name="zero">"0"</string>
 </resources>
