--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="text_shift_opening">Открытие смены:</string>
     <string name="text_date_opening">27.06.20 / 08:45 </string>
     <string name="text_sale">Продажа</string>
+    <string name="text_credit">Кредит</string>
+    <string name="text_no_deposit">Без взноса</string>
     <string name="text_return">Возврат</string>
     <string name="text_report">X - отчет</string>
     <string name="text_interim_report">Промежуточный отчет смены</string>
