Created CreditListFragment, CreditListVM and LiveData.

--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="delete_icon">Delete Icon</string>
     <string name="price">Цена, сом</string>
     <string name="zero">0</string>
+    <string name="title_credit_list">Список кредитов</string>
 
     <!--Side menu sell-->
     <string name="nav_open_drawer">open</string>
