--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="payment_by_card">Оплата Картой</string>
     <string name="tw_to_be_paid">Итого к оплате</string>
     <string name="btn_continue">Далее</string>
+    <string name="no_back_money">Без сдачи</string>
     <string name="et_received">Принято у клиента, сом:</string>
 
     <string name="fiscal_mode_title">Фискальный режим</string>
@@ -30,5 +31,6 @@
     <string name="position">Позиция</string>
     <string name="payment_method">Метод оплаты</string>
     <string name="cash_check_number">Кассовый чек №%d</string>
+    <string name="prepay">Предоплата</string>
 
 </resources>
