--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -53,4 +53,13 @@
     <string name="text_shift_close">Закрыть смену</string>
     <string name="text_shift_cancel">Отмена</string>
     <string name="text_shift_closing_description">Просле закрытия смены будет сформирован и отправлен Z отчет (отчет конца смены). Начать смену можно будет на следующий день.</string>
+
+    <!--user-->
+    <string name="surname">Фамилия</string>
+    <string name="name">Имя</string>
+    <string name="middleName">Отчество</string>
+    <string name="phoneNumber">+996</string>
+    <string name="inn">ИНН</string>
+    <string name="changing_user_data">Изменение данных</string>
+
 </resources>
