created CreditCheckViewFragment and CreditCheckViewFragmentVM

--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="price">Цена, сом</string>
     <string name="zero">0</string>
     <string name="title_credit_list">Список кредитов</string>
+    <string name="close_credit">Закрыть кредит</string>
 
     <!--Side menu sell-->
     <string name="nav_open_drawer">open</string>
