--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -39,5 +39,9 @@
     <string name="new_sale">Новая Продажа</string>
     <string name="fail_to_print">НЕ УДАЛОСЬ РАСПЕЧАТАТЬ ЧЕК?</string>
     <string name="prepay">Предоплата</string>
+    <string name="cashiers_check">КАССОВЫЙ ЧЕК</string>
+    <string name="receipt_number2">Sale %1$s</string>
+    <string name="receipt_number">ПРОДАЖА №%1$s</string>
+
 
 </resources>
