--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="cashiers_check">КАССОВЫЙ ЧЕК</string>
     <string name="receipt_number2">Sale %1$s</string>
     <string name="receipt_number">ПРОДАЖА №%1$s</string>
+    <string name="logout_fail_massage">Не удалось выполнить выход</string>
 
 
 </resources>
