--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="prepay">Предоплата</string>
     <string name="cashiers_check">КАССОВЫЙ ЧЕК</string>
     <string name="receipt_number">ПРОДАЖА №%1$s</string>
+    <string name="receipt_info">\n\n\n\n\nФПЧЕК%1$s\n\n\n</string>
     <string name="logout_fail_massage">Не удалось выполнить выход</string>
+    <string name="tv_help">Для проверки чека зайдите на сайт ГНС\n www.kkm.gov.kg</string>
 
 </resources>
