--- a/sell/src/main/res/values/strings.xml
+++ b/sell/src/main/res/values/strings.xml
@@ -48,5 +48,10 @@
     <string name="dialog_error">Некорректные данные в запросе</string>
     <string name="tv_help">Для проверки чека зайдите на сайт ГНС\n www.kkm.gov.kg</string>
     <string name="amount_in_soms">%1$s c̲</string>
+    <string name="receipt_in">Внесение</string>
+    <string name="receipt_out">Выплата</string>
+    <string name="receipt_in_out">Внесение и Выплаты из кассы</string>
+    <string name="sum_som">Сумма, сом</string>
+    <string name="confirm">Подтвердить</string>
 
 </resources>
