--- a/auth/src/main/res/values/strings.xml
+++ b/auth/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="ed_password">Пароль</string>
     <string name="ed_gsr_key">Ключ</string>
     <string name="tv_regime">Нефискальный режим</string>
+    <string name="tv_error">Неверные учетные данные</string>
     <string name="btn_login">Войти</string>
 </resources>
